...
            8.w,
            const Text(Global.appName),
          ],
        ),
        actions: [
          IconButton(
            key: const ValueKey('add_entry_button'),
            onPressed: () {
              context.pushNamed(NewEntryView.routeName);
            },
            icon: const Icon(Icons.add, size: 30),
          ),
        ],
...
